Fix gallery meta issue on mobile
A long username would break the layout. Space is limited on smartphone, so we completely remove it. It's still shown when viewing a picture, so nothing is lost.

--- a/assets/stylesheets/topic-gallery.scss
+++ b/assets/stylesheets/topic-gallery.scss
@@ -238,10 +238,14 @@
     }
 
     .gallery-meta {
-      display: flex;
-      align-items: center;
-      margin-top: auto;
-      visibility: hidden;
+      display: none;
+
+      @include viewport.from(md) {
+        display: flex;
+        align-items: center;
+        margin-top: auto;
+        visibility: hidden;
+      }
 
       a {
         color: var(--primary);
@@ -259,7 +263,9 @@
     }
 
     &.group-first .gallery-meta {
-      visibility: visible;
+      @include viewport.from(md) {
+        visibility: visible;
+      }
     }
   }
 
